--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
+    "@haensl/react-component-console": "^2.0.14",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "@vitejs/plugin-react-refresh": "^1.3.0",
+    "axios": "^0.27.2",
+    "javascript-terminal": "^1.1.1",
     "react": "^17.0.2",
     "react-console-emulator": "^5.0.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-terminal-component": "^1.5.0",
+    "styled-components": "^5.3.5",
     "vite": "^2.3.8"
   }
 }
