--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "@vitejs/plugin-react-refresh": "^1.3.0",
+    "@webscopeio/react-console": "^1.2.1",
     "axios": "^0.27.2",
     "javascript-terminal": "^1.1.1",
     "react": "^17.0.2",
