--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ReplitReactjsProject",
   "version": "0.0.1",
   "scripts": {
+    "start": "npm run build && npm run serve",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
