--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ReplitReactjsProject",
   "version": "0.0.1",
   "scripts": {
-    "start": "npm run build",
+    "start": "npm run build && node server.js",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
@@ -15,6 +15,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.0",
     "@webscopeio/react-console": "^1.2.1",
     "axios": "^0.27.2",
+    "express": "^4.18.1",
     "javascript-terminal": "^1.1.1",
     "react": "^17.0.2",
     "react-console-emulator": "^5.0.1",
